--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "bootstrap/dist/css/bootstrap.min.css"
+              
             ],
             "scripts": [
               "jquery/dist/jquery.min.js",
