--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,7 @@
             ],
             "scripts": [
               "jquery/dist/jquery.min.js",
-              "bootstrap/dist/js/bootstrap.min.js",
+              "bootstrap/dist/js/bootstrap.bundle.min.js",
               "src/scripts.js"
             ]
           },
